jenkins_server_terraform/04-route.tf
# https://registry.terraform.io/providers/hashicorp/aws/6.17.0/docs/resources/route_table
# https://registry.terraform.io/providers/hashicorp/aws/6.17.0/docs/resources/route_table_association

# Public Route Table
# Routes traffic from public subnets to the internet gateway
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }

  tags = {
    Name = "jenkins-public-rt"
    Type = "Public"
  }
}

# Private Route Table
# Routes traffic from private subnets to the NAT gateway
# resource "aws_route_table" "private" {
#   vpc_id = aws_vpc.main.id

#   route {
#     cidr_block = "0.0.0.0/0"
#     gateway_id = aws_nat_gateway.main.id
#   }

#   tags = {
#     Name = "jenkins-private-rt"
#     Type = "Private"
#   }
# }



# Route table associations for public subnets
resource "aws_route_table_association" "public_1" {
  subnet_id      = aws_subnet.public_1.id
  route_table_id = aws_route_table.public.id
}

# resource "aws_route_table_association" "public_2" {
#   subnet_id      = aws_subnet.public_2.id
#   route_table_id = aws_route_table.public.id
# }

# resource "aws_route_table_association" "public_3" {
#   subnet_id      = aws_subnet.public_3.id
#   route_table_id = aws_route_table.public.id
# }

# Route table associations for private subnets
# resource "aws_route_table_association" "private_1" {
#   subnet_id      = aws_subnet.private_1.id
#   route_table_id = aws_route_table.private.id
# }

# resource "aws_route_table_association" "private_2" {
#   subnet_id      = aws_subnet.private_2.id
#   route_table_id = aws_route_table.private.id
# }

# resource "aws_route_table_association" "private_3" {
#   subnet_id      = aws_subnet.private_3.id
#   route_table_id = aws_route_table.private.id
# }
